--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@ needs, without any interaction necessary.
 <p style="float:right; position:relative; top:-30px;">
 <!-- <p style="text-align: center;"> -->
 <span class="downloadbox-border" >
-<a href="/fai-cd/faicd64-large_5.3.6.iso" style="text-decoration: none">
-<span class="downloadbox-real" >FAI ISO (1016 MB)</span>
+<a href="/fai-cd/faicd64-large_5.4.iso" style="text-decoration: none">
+<span class="downloadbox-real" >FAI ISO (1.1 GB)</span>
 </a>
 </span>
 </p>
@@ -54,11 +54,13 @@ Motto: Plan your installation, and FAI installs your plan.</p>
 <h2 style="display:inline-block;width:50%">NEWS</h2>
 
 <ul>
+<li>[6 Oct 2017] <b><a
+href="https://lists.uni-koeln.de/pipermail/linux-fai/2017-October/011829.html">FAI
+5.4 released</b> </a>, new ISO images available</li>
 <li>[6 Sep 2017] <b>Have a look at <a
 href="https://debconf17.debconf.org/talks/85/">the video</a> of my FAI demo</b> at DebConf 17</li>
-<li>[4 Jul 2017] <b>new ISO images available for FAI 5.3.6</b> </li>
-<li>[20 Apr 2017] <b>FAI 5.3.6 released</b> </li>
-<li>[14 Oct 2016] <b>FAI 5.2 is released, <a href="https://lists.uni-koeln.de/pipermail/linux-fai/2016-October/011549.html">FAI is going to the cloud</a></b> </li>
+<li>[14 Oct 2016] <b> <a
+href="https://lists.uni-koeln.de/pipermail/linux-fai/2016-October/011549.html">FAI 5.2 is going to the cloud</a></b> </li>
 </ul>
 
 <div style="width:32%;float:right;position:relative; top:-110px;">
@@ -78,8 +80,7 @@ href="https://debconf17.debconf.org/talks/85/">the video</a> of my FAI demo</b> 
 
 <p></p>
 <br></br>
-<b>FAI is free software, distributed under the terms of the GNU General
-Public License, version 2 or any later version.</b>
+<b>FAI is free software, distributed under the terms of the GNU GPL, version 2 or any later version.</b>
 
 <p>&nbsp;</p>
       </div>
