--- a/fai-cd/index.html
+++ b/fai-cd/index.html
@@ -32,8 +32,8 @@
 <br>
 <br>
 <span class="downloadbox-border" >
-<a href="faicd64-large_5.3.6.iso" style="text-decoration: none">
-<span class="downloadbox-real" >FAI ISO large  &nbsp; (1016 MB) </span>
+<a href="faicd64-large_5.4.iso" style="text-decoration: none">
+<span class="downloadbox-real" >FAI ISO large  &nbsp; (1.1 GB) </span>
 </a>
 </span>
 &nbsp;
@@ -47,8 +47,8 @@ for CentOS 7 and Ubuntu 16.04
 
 
 <span class="downloadbox-border" >
-<a href="faicd64-small_5.3.6.iso" style="text-decoration: none">
-<span class="downloadbox-real" >FAI ISO small &nbsp; (671 MB)</span>
+<a href="faicd64-small_5.4.iso" style="text-decoration: none">
+<span class="downloadbox-real" >FAI ISO small &nbsp; (686 MB)</span>
 </a>
 </span>
 &nbsp;
@@ -61,7 +61,7 @@ basefiles are downloaded from the internet.
 <p>
 
 <span class="downloadbox-border" >
-<a href="faicd64-ubuntu-only_5.3.6.iso" style="text-decoration: none">
+<a href="faicd64-ubuntu-only_5.4.iso" style="text-decoration: none">
 <span class="downloadbox-real" >FAI ISO Ubuntu &nbsp; (1.1 GB)</span>
 </a>
 </span>
@@ -75,7 +75,7 @@ This image only installs Ubuntu 16.04 LTS. All packages are included.
 
 
 <span class="downloadbox-border" >
-<a href="faicd64-autodiscover_5.3.6.iso" style="text-decoration: none">
+<a href="faicd64-autodiscover_5.4.iso" style="text-decoration: none">
 <span class="downloadbox-real" >Autodiscover CD &nbsp; (24 MB) </span>
 </a>
 </span>
@@ -87,7 +87,7 @@ Boot only image which autodiscovers the FAI server.
 <br>
 
 <p style="text-align: center;">
-All boot images use Debian jessie, FAI 5.3.6, kernel 4.9, amd64 architecture,
+All boot images use Debian jessie, FAI 5.4, kernel 4.9, amd64 architecture,
 <a href=sha256sums.asc>sha256sum.asc</a> of the ISO's
 <HR>
 <p>
@@ -113,7 +113,7 @@ This is the small FAI CD using Debian stretch, kernel 4.9.
 
 You can write the ISO image onto a USB stick using the command dd(1):
 <div class="featurebox">
-<pre>dd if=faicd64-large_5.3.6.iso of=/dev/sdX</pre> </div>
+<pre>dd if=faicd64-large_5.4.iso of=/dev/sdX</pre> </div>
 and replace /dev/sdX with the name of your USB device (e.g. /dev/sdf).
 
 <HR>
