--- a/index.html
+++ b/index.html
@@ -54,7 +54,12 @@ Motto: Plan your installation, and FAI installs your plan.</p>
 <h2 style="display:inline-block;width:50%">NEWS</h2>
 
 <ul>
+
 <li>[6 Oct 2017] <b><a
+href="https://youtu.be/5eZcMTT70rg">Video
+</a> of creating a cross architecture disk image for ARM64
+
+<li>[5 Oct 2017] <b><a
 href="https://lists.uni-koeln.de/pipermail/linux-fai/2017-October/011829.html">FAI
 5.4 released</b> </a>, new ISO images available</li>
 <li>[6 Sep 2017] <b>Have a look at <a
