--- a/screenshots/index.html
+++ b/screenshots/index.html
@@ -29,13 +29,16 @@
 <h2>Videos</h2>
 
 <ul>
-<li> <a href="https://youtu.be/POOuZdWmnqA"> Video in german about FAI
- 5.0 server installation</a>
- (<a href="faiserver-install.avi">download 19MB)</a>. A FAI server is installed
- fully automatically from CD.
-<li> <a href="https://youtu.be/btbqz_hVfpo"> Video in german about FAI 5.0</a>
- (<a href="fai-5.0.avi">download 105MB)</a>. Four different machines
- are installed simultaneously.
+<li> Cross-architecture building an ARM64 disk image: <a href="https://youtu.be/5eZcMTT70rg"> Video in english</a>
+(<a href="fai-5.4-cross-architecture.mp4">download 49MB)</a>
+
+<li> FAI 5.0 server installation from CD: <a href="https://youtu.be/POOuZdWmnqA"> Video in german </a>
+ (<a href="faiserver-install.avi">download 19MB)</a>.
+
+<li> Four different machines are installed simultaneously.: <a href="https://youtu.be/btbqz_hVfpo"> Video in german about FAI 5.0</a>
+ (<a href="fai-5.0.avi">download 105MB)</a>. 
+
+
 <li> Ubuntu Oneiric (11.10) installation <a href="http://www.youtube.com/watch?v=yLIZL_iyAww">Video 1</a>, 
 <a href="http://www.youtube.com/watch?v=nW5MS3_pzyY">Video 2</a>, 
 <a href="https://www.youtube.com/watch?v=1Vw9NJ9KVfE">Video 3</a>
