--- a/index.html
+++ b/index.html
@@ -55,15 +55,15 @@ Motto: Plan your installation, and FAI installs your plan.</p>
 
 <ul>
 
-<li>[6 Oct 2017] <b><a
+<li>[6 Oct 2017] <a
 href="https://youtu.be/5eZcMTT70rg">Video
 </a> of creating a cross architecture disk image for ARM64
 
 <li>[5 Oct 2017] <b><a
 href="https://lists.uni-koeln.de/pipermail/linux-fai/2017-October/011829.html">FAI
 5.4 released</b> </a>, new ISO images available</li>
-<li>[6 Sep 2017] <b>Have a look at <a
-href="https://debconf17.debconf.org/talks/85/">the video</a> of my FAI demo</b> at DebConf 17</li>
+<li>[6 Sep 2017] Have a look at <a
+href="https://debconf17.debconf.org/talks/85/">the video</a> of my FAI demo at DebConf 17</li>
 <li>[14 Oct 2016] <b> <a
 href="https://lists.uni-koeln.de/pipermail/linux-fai/2016-October/011549.html">FAI 5.2 is going to the cloud</a></b> </li>
 </ul>
