add link to logs

--- a/screenshots/index.html
+++ b/screenshots/index.html
@@ -31,6 +31,7 @@
 <ul>
 <li> Cross-architecture building an ARM64 disk image: <a href="https://youtu.be/5eZcMTT70rg"> Video in english</a>
 (<a href="fai-5.4-cross-architecture.mp4">download 49MB)</a>
+<a href="https://fai-project.org/logs/armhost/last/">log files</a>
 
 <li> FAI 5.0 server installation from CD: <a href="https://youtu.be/POOuZdWmnqA"> Video in german </a>
  (<a href="faiserver-install.avi">download 19MB)</a>.
