add report and video

--- a/reports/index.html
+++ b/reports/index.html
@@ -32,6 +32,36 @@ Currently we have more than 300 detailed reports. Please also fill out the <a hr
 <p>
 <hr/>
 
+<b>From:</b> TUXEDO Computers GmbH, tux aT companyname .com
+<br><b>Date:</b> Fri, 13 Oct 2017 12:09:32 +0200
+<pre>
+How many hosts have you installed using fai? We don't count them but it must be <b>tenthousands</b> literally.
+      Per day there are ca. 30 installations via <a href="https://www.tuxedocomputers.com/TUXEDO-WebFAI.geek">WebFAI</a> solely.
+
+Which types of hosts are you installing with fai? Laptops, Desktops, small Mini-PCs
+
+Which version of fai are you using? We use three different versions: 4.0.8, 5.3.6 and <b>5.4</b>.
+Which version are you using as your install kernel? We are running the plain Debian kernel.
+How do you boot your hosts? Internally we use USB sticks for local FAI usage.
+        We're handing out special USB sticks with every ordered laptop to enable customers using WebFAI.
+
+Does the default install kernel recognize all your hardware?
+        FAI 4.X -> No. One special ethernet device is not recognized because of missing drivers. FAI 5.x solves this.
+        FAI 5.x -> Yes.
+Which drivers are missing? None a.t.m.
+Do you manage your configuration space under version control? No.
+How big is your config space (Mbytes, # of files)? 12 GB
+How many files do you have in ../config/files? 190 files.
+
+What types of scripts are you using for local customization? We're using some BASH scripts to customize FAI for our deployed systems.
+
+<b>What is the business of your company/organisation?</b> We produce custom-tailored Linux hardware, laptops and PCs. <a href="https://www.tuxedocomputers.com">TUXEDO Computers</a>
+<br><b>Additional comments:</b>
+  We have a <a href="https://www.youtube.com/watch?v=wpLPRG3QA64">demo video</a> for <a href="https://www.tuxedocomputers.com/TUXEDO-WebFAI.geek">WebFAI</a>, the system our customers can use:
+  Download including two pictures here: https://mytuxedo.de/index.php/s/SbldjJVTbrXDNoz/download
+</pre> <HR>
+
+
 <b>From:</b> Russell Currie, University of Cambridge
 <br><b>Date:</b> Tue, 11 Jul 2017 09:17:05 +0100
 <pre>
