--- a/screenshots/index.html
+++ b/screenshots/index.html
@@ -44,6 +44,8 @@
 <a href="http://www.youtube.com/watch?v=nW5MS3_pzyY">Video 2</a>, 
 <a href="https://www.youtube.com/watch?v=1Vw9NJ9KVfE">Video 3</a>
 
+<li> <a href="https://www.youtube.com/watch?v=wpLPRG3QA64">Demo video</a> for <a href="https://www.tuxedocomputers.com/TUXEDO-WebFAI.geek">WebFAI</a>
+
 <li> <a href="../talks">Videos of talks about FAI</a>
 </ul>
 
