post cloud sprint update

--- a/index.html
+++ b/index.html
@@ -55,6 +55,15 @@ Motto: Plan your installation, and FAI installs your plan.</p>
 
 <ul>
 
+<li> I will attend the <a
+href="https://wiki.debian.org/DebianEvents/gb/2017/MiniDebConfCambridge">Mini-Debconf
+in Cambridge</a> end of november
+
+
+<li>[18 Oct 2017] We had a great Debian cloud sprint in
+Seattle/Bellevue. We've created a FAI config space for GCE, Azure,
+EC2 and Openstack cloud images and a huge test suite.
+
 <li>[6 Oct 2017] <a
 href="https://youtu.be/5eZcMTT70rg">Video
 </a> of creating a cross architecture disk image for ARM64
