--- a/roadmap/index.html
+++ b/roadmap/index.html
@@ -41,6 +41,7 @@ contact before you start working.
 <li> --- TODO ---
 <li> relax and recover from testing and release process!
 <li> --- DONE ---
+<li> template engine for fcopy, for e.g simple variable substitution? 
 <li> support for building cross architecture disk images, e.g. ARM 64bit
 <li> new command for building cloud images with FAI
 <li> btrfs and NVMe support for setup-storage
@@ -48,7 +49,6 @@ contact before you start working.
 <li> support for cloning machines with file system images
 <li> major update of FAI guide
 <li> --- TODO's for the next versions ---
-<li> template engine for fcopy, for e.g simple variable substitution? Use %%_VARIABLENAME_%% ? check a mail concerning that
 <li> fai-monitor-gui: new option, remove host if everything went fine
 <li> add option -l to fai command. List status of fai. Show list of
 classes, date of last fai action
@@ -58,7 +58,7 @@ classes, date of last fai action
 <br>
 <HR>
 <ADDRESS>
-Wed, 20 Sep 2017 21:56:13 +0200
+Wed, 18 Oct 2017 20:13:31 -0700
 </ADDRESS>
 
       </div>
