--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ in Cambridge</a> end of november
 
 
 <li>[18 Oct 2017] We had a great Debian cloud sprint in
-Seattle/Bellevue. We've created a FAI config space for GCE, Azure,
+Seattle/Bellevue. We've created a FAI <a href="https://anonscm.debian.org/git/cloud/fai-cloud-images.git">config space</a> for GCE, Azure,
 EC2 and Openstack cloud images and a huge test suite.
 
 <li>[6 Oct 2017] <a
