add links to other projects

--- a/otherdocs/index.html
+++ b/otherdocs/index.html
@@ -55,6 +55,9 @@ web framework for managing accounts and systems in LDAP
 databases. This project is stalled.
 <li><a href="https://www.fusiondirectory.org/">FusionDirectory</a> a
 fork of GOsa which is actively maintained.
+
+<li> <a href="https://iankelling.org/git/?p=automated-distro-installer">Multi-boot/distro btrfs provisioning</a>
+
 </ul>
 
 <h1>Other FAI documentation</h1>
@@ -91,6 +94,11 @@ one for <a href="http://144.76.210.162/fai/fai5-pc/fai_config.tgz">PCs</a>.
 <li>
 <a href="http://lihas.de/leistungen_und_loesungen/betriebssystem-rollouts.html">LiHAS
 Linux Betriebssysteminstallationen mit FAI </a>
+
+
+<li> <a href="https://github.com/SverigeLinux">SverigeLinux</a>, a
+swedish installation using FAI, <a href="https://www.youtube.com/watch?v=W1tT60E830E">video</a>
+
 
 <li> <a href="http://neeleshgurjar.co.in/techidnyan/bare-metal-provisioning-of-linux-proxmox-using-fai/">Bare Metal Provisioning of Linux (Proxmox) using FAI</a>,
 <a href="https://pve.proxmox.com/wiki/Unattended_installation_of_Proxmox">blog entry<a/>
