--- a/roadmap/index.html
+++ b/roadmap/index.html
@@ -39,6 +39,7 @@ contact before you start working.
 <h1>Topics for FAI 5.X</h1>
 <ul>
 <li> --- TODO ---
+<li> FAI.me
 <li> relax and recover from testing and release process!
 <li> --- DONE ---
 <li> template engine for fcopy, for e.g simple variable substitution? 
@@ -58,7 +59,7 @@ classes, date of last fai action
 <br>
 <HR>
 <ADDRESS>
-Wed, 18 Oct 2017 20:13:31 -0700
+Fri, 27 Oct 2017 19:15:59 +0200
 </ADDRESS>
 
       </div>
