--- a/index.html
+++ b/index.html
@@ -58,19 +58,21 @@ Motto: Plan your installation, and FAI installs your plan.</p>
 <li> I will attend the <a
 href="https://wiki.debian.org/DebianEvents/gb/2017/MiniDebConfCambridge">Mini-Debconf
 in Cambridge</a> end of november
-
+</li>
 
 <li>[18 Oct 2017] We had a great Debian cloud sprint in
 Seattle/Bellevue. We've created a FAI <a href="https://anonscm.debian.org/git/cloud/fai-cloud-images.git">config space</a> for GCE, Azure,
 EC2 and Openstack cloud images and a huge test suite.
+</li>
 
 <li>[6 Oct 2017] <a
 href="https://youtu.be/5eZcMTT70rg">Video
 </a> of creating a cross architecture disk image for ARM64
+</li>
 
 <li>[5 Oct 2017] <b><a
 href="https://lists.uni-koeln.de/pipermail/linux-fai/2017-October/011829.html">FAI
-5.4 released</b> </a>, new ISO images available</li>
+5.4 released </a></b>, new ISO images available</li>
 <li>[6 Sep 2017] Have a look at <a
 href="https://debconf17.debconf.org/talks/85/">the video</a> of my FAI demo at DebConf 17</li>
 <li>[14 Oct 2016] <b> <a
