--- a/fai-cd/index.html
+++ b/fai-cd/index.html
@@ -87,7 +87,7 @@ Boot only image which autodiscovers the FAI server.
 <br>
 
 <p style="text-align: center;">
-All boot images use Debian jessie, FAI 5.4, kernel 4.9, amd64 architecture,
+All installation images use Debian stretch, FAI 5.4, kernel 4.9, amd64 architecture,
 <a href=sha256sums.asc>sha256sum.asc</a> of the ISO's
 <HR>
 <p>
@@ -121,7 +121,7 @@ and replace /dev/sdX with the name of your USB device (e.g. /dev/sdf).
 
 <h3>Short description for the FAI boot images</h3>
 <ul>
-<li> These installation images can install Debian 8 (XFCE and GNOME),
+<li> These installation images can install Debian 9 (XFCE and GNOME),
 Ubuntu 16.04 and CentOS 7, without the need of an install server
 <li> No network is needed and you can install the whole system from
 the installation media.
