--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@ needs, without any interaction necessary.
 <p style="float:right; position:relative; top:-30px;">
 <!-- <p style="text-align: center;"> -->
 <span class="downloadbox-border" >
-<a href="/fai-cd/faicd64-large_5.4.iso" style="text-decoration: none">
-<span class="downloadbox-real" >FAI ISO (1.1 GB)</span>
+<a href="/fai-cd/faicd64-large_5.5.iso" style="text-decoration: none">
+<span class="downloadbox-real" >FAI ISO (1005 MB)</span>
 </a>
 </span>
 </p>
@@ -60,6 +60,9 @@ href="https://wiki.debian.org/DebianEvents/gb/2017/MiniDebConfCambridge">Mini-De
 in Cambridge</a> end of november
 </li>
 
+<li>[8 Nov 2017] <b>FAI 5.5 released</b> and new ISO images are available
+</li>
+
 <li>[18 Oct 2017] We had a great Debian cloud sprint in
 Seattle/Bellevue. We've created a FAI <a href="https://anonscm.debian.org/git/cloud/fai-cloud-images.git">config space</a> for GCE, Azure,
 EC2 and Openstack cloud images and a huge test suite.
@@ -70,13 +73,13 @@ href="https://youtu.be/5eZcMTT70rg">Video
 </a> of creating a cross architecture disk image for ARM64
 </li>
 
-<li>[5 Oct 2017] <b><a
+<li>[5 Oct 2017] <a
 href="https://lists.uni-koeln.de/pipermail/linux-fai/2017-October/011829.html">FAI
-5.4 released </a></b>, new ISO images available</li>
+5.4 released </a>, new ISO images available</li>
 <li>[6 Sep 2017] Have a look at <a
 href="https://debconf17.debconf.org/talks/85/">the video</a> of my FAI demo at DebConf 17</li>
-<li>[14 Oct 2016] <b> <a
-href="https://lists.uni-koeln.de/pipermail/linux-fai/2016-October/011549.html">FAI 5.2 is going to the cloud</a></b> </li>
+<li>[14 Oct 2016] <a
+href="https://lists.uni-koeln.de/pipermail/linux-fai/2016-October/011549.html">FAI 5.2 is going to the cloud</a> </li>
 </ul>
 
 <div style="width:32%;float:right;position:relative; top:-110px;">
