add info about Ubuntu

--- a/download/index.html
+++ b/download/index.html
@@ -65,6 +65,18 @@ from a <a href=http://cdn.debian.net/debian/pool/main/f/fai/>Debian mirror</a>.
 
 <h1>Packages for Ubuntu</h1>
 
+Due to a bug in Ubuntu, you cannot create an Ubuntu nfsroot! See
+<a href="https://bugs.launchpad.net/ubuntu/+source/linux/+bug/1660587">
+https://bugs.launchpad.net/ubuntu/+source/linux/+bug/1660587</a>.
+
+On an FAI server running Ubuntu, you must create a Debian nfsroot and also
+create an Ubuntu <a href="/download/basefiles">base file</a>
+and put this into the basefiles subdirectory.
+
+
+
+
+<br>
 Up-to-date official packages:
 <p>
 <div class="featurebox"><h3>
