--- a/menu.html
+++ b/menu.html
@@ -11,6 +11,7 @@
 		<li><a href="/cluster/">Clusters built with FAI</a></li>
 	      </ul>
 	  </li>
+	    <li><a href="/FAIme/" title="FAI.me">FAI.me / Build your own</a></li>
 	    <li><a href="/screenshots/" title="Screenshots">Videos / Screenshots</a></li>
 
 	    <li class="active">
