--- a/reports/index.html
+++ b/reports/index.html
@@ -32,6 +32,26 @@ Currently we have more than 300 detailed reports. Please also fill out the <a hr
 <p>
 <hr/>
 
+<b>From:</b> Mark Devaney
+<br><b>Date:</b> Thu, 16 Nov 2017 08:11:44 -0600
+<pre>
+How many hosts have you installed using fai? <b>approx 200</b>
+Which version of fai are you using? <b>3.5</b>
+Which version are you using as your install kernel? plain Debian
+
+Which types of hosts are you installing with fai? cluster nodes
+
+How do you boot your hosts? PXE
+Does the default install kernel recognize all your hardware? yes
+Do you manage your configuration space under version control? subversion
+
+How big is your config space (Mbytes, # of files)? 350K
+How many files do you have in ../config/files? ~40
+What types of scripts are you using for local customization? shell
+<b>What is the business of your company/organisation?</b> finance
+</pre> <HR>
+
+
 <b>From:</b> TUXEDO Computers GmbH, tux aT companyname .com
 <br><b>Date:</b> Fri, 13 Oct 2017 12:09:32 +0200
 <pre>
