--- a/talks/index.html
+++ b/talks/index.html
@@ -117,6 +117,17 @@ live demos of FAI 5.0 </a> at DebConf 16 in Capetown.
 <a href="http://meetings-archive.debian.net/pub/debian-meetings/2017/debconf17/fai-demo-session.vp8.webm">video</a>,
 <a href="https://debconf17.debconf.org/talks/85/">talk announcement</a>
 
+<li> <a href="http://meetings-archive.debian.net/pub/debian-meetings/2017/mini-debconf-cambridge/my-two-cents-on-d-i.vp9.webm">Mini-Debconf Cambridge</a>
+
+<ul>
+<li> talk: Creating disk images using FAI, <a href="http://meetings-archive.debian.net/pub/debian-meetings/2017/mini-debconf-cambridge/creating-disk-images-using-fai.vp9.webm">video</a>,
+<a href="doc/cambridge-17.pdf">slides</a>
+<li>
+talk about d-i <a
+href="http://meetings-archive.debian.net/pub/debian-meetings/2017/mini-debconf-cambridge/my-two-cents-on-d-i.vp9.webm">video</a>,
+<a href="/doc/cmb-17-2.pdf">Slides</a>
+</ul>
+
 </ul>
 
 <!--
