--- a/index.html
+++ b/index.html
@@ -55,9 +55,12 @@ Motto: Plan your installation, and FAI installs your plan.</p>
 
 <ul>
 
+<li>
+I <a href="https://lists.uni-koeln.de/pipermail/linux-fai/2017-November/011869.html">announced</a> the <a href="/FAIme">FAI.me</a> service
+</li>
 <li> [26 Nov 2017] I attended the <a
 href="https://wiki.debian.org/DebianEvents/gb/2017/MiniDebConfCambridge">Mini-Debconf
-in Cambridge</a> end of november. There I announced the <a href="/FAIme">FAI.me</a> service
+in Cambridge</a> end of november. 
 </li>
 
 <li>[8 Nov 2017] <b>FAI 5.5 released</b> and new ISO images are available
