--- a/talks/index.html
+++ b/talks/index.html
@@ -121,7 +121,7 @@ live demos of FAI 5.0 </a> at DebConf 16 in Capetown.
 
 <ul>
 <li> talk: Creating disk images using FAI, <a href="http://meetings-archive.debian.net/pub/debian-meetings/2017/mini-debconf-cambridge/creating-disk-images-using-fai.vp9.webm">video</a>,
-<a href="doc/cambridge-17.pdf">slides</a>
+<a href="/doc/cambridge-17.pdf">slides</a>
 <li>
 talk about d-i <a
 href="http://meetings-archive.debian.net/pub/debian-meetings/2017/mini-debconf-cambridge/my-two-cents-on-d-i.vp9.webm">video</a>,
@@ -147,7 +147,7 @@ and at
 <p>
 
 <ADDRESS>
-Sun, 20 Aug 2017 18:28:20 +0200
+Wed, 29 Nov 2017 14:26:58 +0100
 </ADDRESS>
 
  
