--- a/otherdocs/index.html
+++ b/otherdocs/index.html
@@ -71,7 +71,11 @@ inside FAI
 <li> <a href="/talks/">Talks</a>  of Thomas, the main author
 
  <li> A <a href="http://wiki.fai-project.org/wiki/FAI_Installation_Overview
-">visual overview</a> of how all the pieces of an FAI installation fit together. 
+">visual overview</a> of how all the pieces of an FAI installation fit together.
+
+<li> <a
+href="https://github.com/girol/cluster-tools/tree/master/fai">FAI
+tutorial for a Bewoulf-type cluster </a>
 
 <!-- 
 <li> <a href=""></a>
