add comment and link to FAIme

--- a/fai-cd/index.html
+++ b/fai-cd/index.html
@@ -89,6 +89,9 @@ Boot only image which autodiscovers the FAI server.
 <p style="text-align: center;">
 All installation images use Debian stretch, FAI 5.5, kernel 4.9, amd64 architecture,
 <a href=sha256sums.asc>sha256sum.asc</a> of the ISO's
+<br>
+<b>If none of the ISOs fit your needs, use <a href="/FAIme">FAI.ME build
+service</a></b>
 <HR>
 <p>
 <br>
