--- a/mailinglist/index.html
+++ b/mailinglist/index.html
@@ -39,25 +39,25 @@ You have to subscribe to the list before posting to it.
 is the user mailling list
 
 (<a href="https://lists.uni-koeln.de/pipermail/linux-fai/">main archive</a>,
-<a href="http://www.mail-archive.com/linux-fai%40uni-koeln.de/">searchable archive</a>)
+<a href="https://www.mail-archive.com/linux-fai%40uni-koeln.de/">searchable archive</a>)
 
 <li> Search the linux-fai mailing list:
-<form METHOD="get" ACTION="http://google.com/search">
+<form METHOD="get" ACTION="https://google.com/search">
   <input type="text"   name="q" size="17" maxlength="255" value=""/>
     <input type="hidden" name="sitesearch"
-      value="http://lists.uni-koeln.de/pipermail/linux-fai/"/>
+      value="https://lists.uni-koeln.de/pipermail/linux-fai/"/>
       <input type="submit" name="btnG" value="Go" />
 </form>
 
 <li> <a href="https://lists.uni-koeln.de/mailman/listinfo/linux-fai-devel/">linux-fai-devel</a>
 is the developer mailling list
 (<a href="https://lists.uni-koeln.de/pipermail/linux-fai-devel/">main archive</a>,
-<a href=http://www.mail-archive.com/linux-fai-devel%40uni-koeln.de/>searchable archive</a>)
+<a href=https://www.mail-archive.com/linux-fai-devel%40uni-koeln.de/>searchable archive</a>)
 <li> Search the linux-fai-devel mailing list:
-<form METHOD="get" ACTION="http://google.com/search">
+<form METHOD="get" ACTION="https://google.com/search">
   <input type="text"   name="q" size="17" maxlength="255" value=""/>
     <input type="hidden" name="sitesearch"
-      value="http://lists.uni-koeln.de/pipermail/linux-fai-devel/"/>
+      value="https://lists.uni-koeln.de/pipermail/linux-fai-devel/"/>
       <input type="submit" name="btnG" value="Go" />
 </form>
 
@@ -73,7 +73,7 @@ This is a bilingual channel. We speak English and German.
 <ul>
 <li>
 Search the IRC logs: 
-<form METHOD="get" ACTION="http://google.com/search">
+<form METHOD="get" ACTION="https://google.com/search">
   <input type="text"   name="q" size="17" maxlength="255" value=""/>
     <input type="hidden" name="sitesearch"
       value="http://layer-acht.org/fai-irc/"/>
@@ -83,7 +83,7 @@ Search the IRC logs:
 
 <h1>Wiki</h1>
 
-The <A href="http://wiki.fai-project.org">FAI Wiki</A> has
+The <A href="https://wiki.fai-project.org">FAI Wiki</A> has
 lots of more infos, some tips and tricks and scripts from other
 people, but is often not up-to-date. You have to request an
 account via <a href="mailto:faiwikimgr XnospamX @fai-project.org">email</a> 
