--- a/cluster/index.html
+++ b/cluster/index.html
@@ -33,10 +33,10 @@
 Each node has two E5-2690v2, 3.00GHz and 128GB of RAM. The parallel
 installation of all nodes using FAI took 7 minutes. (2014)
 
-<li>A new <a href="http://www.debian.org/News/2011/20110729">Beowulf cluster</a> at EDF (200 Tflops) which is 43rd in the latest TOP500 (June 2011), was partially installed using FAI.
+<li>A new <a href="https://www.debian.org/News/2011/20110729">Beowulf cluster</a> at EDF (200 Tflops) which is 43rd in the latest TOP500 (June 2011), was partially installed using FAI.
 
-<li> A huge cluster called <a href="http://wiki.debian.org/Teams/Publicity/DebianTimesTeam/PressReleases/GravitationalWaveDebianCluster">ATLAS</a>
- containing 1342 nodes at the Max Planck Institute for Gravitational Physics (2008). <a href="http://fai-project.org/reports/index.html#atlas">questionaire entry</a>,<a href="http://www.top500.org/system/9234">top500.org entry</a>
+<li> A huge cluster called <a href="https://wiki.debian.org/Teams/Publicity/DebianTimesTeam/PressReleases/GravitationalWaveDebianCluster">ATLAS</a>
+ containing 1342 nodes at the Max Planck Institute for Gravitational Physics (2008). <a href="https://fai-project.org/reports/index.html#atlas">questionaire entry</a>,<a href="http://www.top500.org/system/9234">top500.org entry</a>
 <a href="http://www.linux-magazin.de/NEWS/Atlas-Supercomputing-mit-Debian">German article</a>,<a href="http://www.heise.de/newsticker/meldung/Einstein-Cluster-Neuer-Supercomputer-fuer-die-Gravitationswellenforschung-209397.html">another article</a>
 
 
