--- a/sources/index.html
+++ b/sources/index.html
@@ -37,14 +37,14 @@
 <li> <a href="https://lists.uni-koeln.de/pipermail/linux-fai-commit/">git commit mails</a>
 <li> <a href="/NEWS">NEWS</A>: user visible changes of the sources
 <li> <a href=http://packages.debian.org/changelogs/pool/main/f/fai/current/changelog>Detailed changelog</a>
-<li> List of <a href="http://wiki.fai-project.org/index.php/Variables">important variables</a> inside FAI
+<li> List of <a href="https://wiki.fai-project.org/index.php/Variables">important variables</a> inside FAI
 </ul>
 
 
 <h1>QA and Bugs</h1>
 <ul>
 <li> <a href="https://tracker.debian.org/pkg/fai">QA page</A> of FAI
-<li> <a href="http://bugs.debian.org/src:fai">Bugs</a> in the Debian Bug Tracking System
+<li> <a href="https://bugs.debian.org/src:fai">Bugs</a> in the Debian Bug Tracking System
 </ul>
 
 
@@ -52,7 +52,7 @@
 <h2>Packages for testing of the master branch</h2>
 <ul>
 <li> Overview of the automatic build process:
-<a href="http://jenkins.grml.org/job/fai-binaries/">http://jenkins.grml.org/job/fai-binaries/</a>
+<a href="https://jenkins.grml.org/job/fai-binaries/">https://jenkins.grml.org/job/fai-binaries/</a>
 </ul>
 <ul>
 
