--- a/fai-cd/index.html
+++ b/fai-cd/index.html
@@ -146,7 +146,7 @@ the installation media.
 
 <ul>
 <li> <a href="debian9-live-xfce.iso">Live CD</a> using Debian 9 (stretch)
-, <a href="http://wiki.fai-project.org/wiki/Use_nfsroot_for_diskless_clients">documentation</a>
+, <a href="https://wiki.fai-project.org/wiki/Use_nfsroot_for_diskless_clients">documentation</a>
 
 <li> <a href="../fai-cd-jessie">Old CD images</a>
 for Debian 8 aka jessie</li>
