--- a/contact/index.html
+++ b/contact/index.html
@@ -26,10 +26,17 @@
 <!-- removed breadcrumb -->
 
 <h1>Author of FAI</h1>
-<a href="http://www.informatik.uni-koeln.de/~lange">Thomas Lange</a>: lange @ informatik. uni-koeln dot de, Mrfai on #fai
+Thomas Lange is the main author of FAI. He's a Debian Developer since 2000 and a sysadmin since
+1992. He started the FAI project in 1999.
 
+<br>
+<a href="http://www.informatik.uni-koeln.de/~lange">Personal web page</a>
+<br>
+Mail: lange =@= fai-project dOt org
+<br>
+IRC: Mrfai on channel #fai
 <p>
-<a href="/talks/">Talks</a> of Thomas Lange.</p>
+<a href="/talks/">FAI Talks</a> of Thomas</p>
 <p> &nbsp; </p>
 
 <h1>Contact / Support</h1>
