--- a/faq/index.html
+++ b/faq/index.html
@@ -67,7 +67,7 @@ on the time-frame since the last Debian release this kernel might not support
 the most recent hardware. You can use the backports kernel or the grml
 kernel. The <a href="http://grml.org/">Grml</a> live system
 provides Debian packages of recent kernel versions which can be used within FAI,
-just following <a href="http://wiki.fai-project.org/index.php/Grml_Kernel">the
+just following <a href="https://wiki.fai-project.org/index.php/Grml_Kernel">the
   instructions from the Grml_Kernel page in the wiki</a>.</p>
 
 <a name="dash"></a>
@@ -111,7 +111,7 @@ DHCP B can answer the request.</p>
 <h2>Where should I report bugreports?</h2>
 
 <p>Please report bugs against the according FAI Debian package (fai-client,
-fai-server,...) using <a href="http://wiki.debian.org/reportbug">reportbug</a>
+fai-server,...) using <a href="https://wiki.debian.org/reportbug">reportbug</a>
 to <a
   href="http://bugs.debian.org/cgi-bin/pkgreport.cgi?src=fai">bugs.debian.org</a>.
 If you do not know how to use reportbug please write a mail to the <a
