--- a/otherdocs/index.html
+++ b/otherdocs/index.html
@@ -64,13 +64,13 @@ fork of GOsa which is actively maintained.
 
 <ul>
 
-<li> <a href="http://wiki.fai-project.org/wiki/Variables">List</a>  of important variables
+<li> <a href="https://wiki.fai-project.org/wiki/Variables">List</a>  of important variables
 inside FAI
 <li> <a href="/logs"> Log files</a> of successfully installed computers
 
 <li> <a href="/talks/">Talks</a>  of Thomas, the main author
 
- <li> A <a href="http://wiki.fai-project.org/wiki/FAI_Installation_Overview
+ <li> A <a href="https://wiki.fai-project.org/wiki/FAI_Installation_Overview
 ">visual overview</a> of how all the pieces of an FAI installation fit together.
 
 <li> <a
@@ -142,7 +142,7 @@ describing a certain FAI usage (2/2010).
 
 <li> Henning Sprang gave a talk about FAI at <a href="http://2008.rmll.info/Automated-installations-and.html?lang=en">RMLL</a>
 (Rencontres Mondiales du Logiciel Libre = Libre Software Meeting)
-in France (<a href="http://wiki.fai-project.org/images/2/2a/Rmll_2008.pdf">slides</a>,
+in France (<a href="https://wiki.fai-project.org/images/2/2a/Rmll_2008.pdf">slides</a>,
 7/2008).
 
 <li> A <a href="http://www.eyrie.org/~eagle/journal/2008-06/004.html">blog
