addd link, typo

--- a/reports/index.html
+++ b/reports/index.html
@@ -29,6 +29,10 @@ hr {margin: 1em 0;background:#777777;height:2px;color:#777777;border:none;clear:
 <h1>User reports</h1>
 
 Currently we have more than 300 detailed reports. Please also fill out the <a href="/questionnaire">FAI questionnaire</a>.
+
+<p>
+<a href="/references">Overview</a> with logos of some FAI users.
+
 <p>
 <hr/>
 
@@ -36,7 +40,7 @@ Currently we have more than 300 detailed reports. Please also fill out the <a hr
 <br><b>Date:</b> Thu, 16 Nov 2017 08:11:44 -0600
 <pre>
 How many hosts have you installed using fai? <b>approx 200</b>
-Which version of fai are you using? <b>3.5</b>
+Which version of fai are you using? <b>5.3</b>
 Which version are you using as your install kernel? plain Debian
 
 Which types of hosts are you installing with fai? cluster nodes
