--- a/menu.html
+++ b/menu.html
@@ -4,6 +4,7 @@
 
 	    <li class="active"> <a href="/" title="Home">Home</a>
 	      <ul>
+		<li><a href="/references/">References</a></li>
 		<li><a href="/features/" title="Features">Features</a></li>
 		<li><a href="/poster/">Poster / Flyer</a></li>
 		<li><a href="/reports/">User reports</a></li>
