--- a/references/index.html
+++ b/references/index.html
@@ -10,8 +10,11 @@
 
 <style type="text/css">
 hr {margin: 1em 0;background:#777777;height:2px;color:#777777;border:none;clear:both}
+#type-b #content {
+    margin: 0 13px 0 235px;
+}
 .imgframe {
-  padding:4px;
+  padding:3px;
   border:1px solid #cccccc;
 }
 
@@ -37,89 +40,93 @@ hr {margin: 1em 0;background:#777777;height:2px;color:#777777;border:none;clear:
 <span style="line-height:2;" >
 
 <a href="https://www.kaneo-gmbh.de">
-<img class="imgframe" alt="superB" src="pics/kaneo.png" ></a>
+<img class="imgframe" alt="FAI user" src="pics/kaneo.png" ></a>
 <a href="https://www.tuxedocomputers.com">
-<img class="imgframe" alt="superB" src="pics/tuxedo.png" ></a>
+<img class="imgframe" alt="FAI user" src="pics/tuxedo.png" ></a>
 <a href="https://www.xing.com">
-<img class="imgframe" alt="superB" src="pics/xing.png" ></a>
+<img class="imgframe" alt="FAI user" src="pics/xing.png" ></a>
 <a href="https://www.brandwatch.com">
-<img class="imgframe" alt="superB" src="pics/brandwatch.png" ></a>
+<img class="imgframe" alt="FAI user" src="pics/brandwatch.png" ></a>
 <a href="http://www.cae.wisc.edu">
-<img class="imgframe" alt="superB" src="pics/cae.png" ></a>
+<img class="imgframe" alt="FAI user" src="pics/cae.png" ></a>
 <a href="https://www.csail.mit.edu">
-<img class="imgframe" alt="superB" src="pics/csail.png" ></a>
+<img class="imgframe" alt="FAI user" src="pics/csail.png" ></a>
 <a href="http://www.desy.de">
-<img class="imgframe" alt="superB" src="pics/desy.png" ></a>
+<img class="imgframe" alt="FAI user" src="pics/desy.png" ></a>
 <a href="http://www.edf.fr">
-<img class="imgframe" alt="superB" src="pics/edf.png" ></a>
+<img class="imgframe" alt="FAI user" src="pics/edf.png" ></a>
 <a href="https://taz.de">
-<img class="imgframe" alt="superB" src="pics/taz.png" ></a>
+<img class="imgframe" alt="FAI user" src="pics/taz.png" ></a>
 <a href="https://wwwcip.informatik.uni-erlangen.de">
-<img class="imgframe" alt="superB" src="pics/fau.png" ></a>
+<img class="imgframe" alt="FAI user" src="pics/fau.png" ></a>
 <a href="https://hpi.de">
-<img class="imgframe" alt="superB" src="pics/hpi.png" ></a>
+<img class="imgframe" alt="FAI user" src="pics/hpi.png" ></a>
 <a href="https://archive.org">
-<img class="imgframe" alt="superB" src="pics/archive.png" ></a>
-<img class="imgframe" alt="superB" src="pics/ip-exchange.png" >
-<img class="imgframe" alt="superB" src="pics/limux.png" >
+<img class="imgframe" alt="FAI user" src="pics/archive.png" ></a>
+<img class="imgframe" alt="FAI user" src="pics/ip-exchange.png" >
+<img class="imgframe" alt="FAI user" src="pics/limux.png" >
 <a href="https://www.cewe.de">
-<img class="imgframe" alt="superB" src="pics/cewe.png" ></a>
+<img class="imgframe" alt="FAI user" src="pics/cewe.png" ></a>
 <a href="http://narrowxpres.nl">
-<img class="imgframe" alt="superB" src="pics/narrowxpress.png" ></a>
+<img class="imgframe" alt="FAI user" src="pics/narrowxpress.png" ></a>
 <a href="https://www.stayfriends.de">
-<img class="imgframe" alt="superB" src="pics/stayfriends.png" ></a>
+<img class="imgframe" alt="FAI user" src="pics/stayfriends.png" ></a>
 <a href="https://www.spotify.com">
-<img class="imgframe" alt="superB" src="pics/spotify.png" ></a>
+<img class="imgframe" alt="FAI user" src="pics/spotify.png" ></a>
 <a href="https://www.switch.ch">
-<img class="imgframe" alt="superB" src="pics/switch.png" ></a>
+<img class="imgframe" alt="FAI user" src="pics/switch.png" ></a>
 <a href="https://www.rbg.informatik.tu-darmstadt.de/">
-<img class="imgframe" alt="superB" src="pics/tu-darmstadt.png" ></a>
+<img class="imgframe" alt="FAI user" src="pics/tu-darmstadt.png" ></a>
 <a href="http://www.sanger.ac.uk">
-<img class="imgframe" alt="superB" src="pics/sanger.png" ></a>
+<img class="imgframe" alt="FAI user" src="pics/sanger.png" ></a>
 <a href="https://www.mobile.de">
-<img class="imgframe" alt="superB" src="pics/mobile.png" ></a>
+<img class="imgframe" alt="FAI user" src="pics/mobile.png" ></a>
 <a href="https://archive.org">
-<img class="imgframe" alt="superB" src="pics/wayback.png" ></a>
+<img class="imgframe" alt="FAI user" src="pics/wayback.png" ></a>
 <a href="http://www.systems.ethz.ch">
-<img class="imgframe" alt="superB" src="pics/eth.png" ></a>
+<img class="imgframe" alt="FAI user" src="pics/eth.png" ></a>
 <a href="https://www.munichx.de">
-<img class="imgframe" alt="superB" src="pics/munichx.png" ></a>
+<img class="imgframe" alt="FAI user" src="pics/munichx.png" ></a>
+<a href="https://catalyst.net.nz/">
+<img class="imgframe" alt="FAI user" src="pics/catalyst.png" ></a>
 <a href="https://www.mathworks.com">
-<img class="imgframe" alt="superB" src="pics/mathworks.png" ></a>
+<img class="imgframe" alt="FAI user" src="pics/mathworks.png" ></a>
 <a href="https://netways.de">
-<img class="imgframe" alt="superB" src="pics/netways.png" ></a>
+<img class="imgframe" alt="FAI user" src="pics/netways.png" ></a>
 <a href="https://www.uni-marburg.de/hrz">
-<img class="imgframe" alt="superB" src="pics/marburg.png" ></a>
+<img class="imgframe" alt="FAI user" src="pics/marburg.png" ></a>
 <a href="http://openqrm-enterprise.com">
-<img class="imgframe" alt="superB" src="pics/openqrm.png" ></a>
+<img class="imgframe" alt="FAI user" src="pics/openqrm.png" ></a>
 <a href="https://www.opera.com">
-<img class="imgframe" alt="superB" src="pics/opera.png" ></a>
+<img class="imgframe" alt="FAI user" src="pics/opera.png" ></a>
 <a href="https://www.hosteurope.de">
-<img class="imgframe" alt="superB" src="pics/hosteurope.png" ></a>
+<img class="imgframe" alt="FAI user" src="pics/hosteurope.png" ></a>
 <a href="https://www.ida.liu.se">
-<img class="imgframe" alt="superB" src="pics/linkopings.png" ></a>
+<img class="imgframe" alt="FAI user" src="pics/linkopings.png" ></a>
 <a href="https://www.lvm.de">
-<img class="imgframe" alt="superB" src="pics/lvm.png" ></a>
+<img class="imgframe" alt="FAI user" src="pics/lvm.png" ></a>
 <a href="http://informatik.uni-koeln.de/">
-<img class="imgframe" alt="superB" src="pics/koeln.png" ></a>
+<img class="imgframe" alt="FAI user" src="pics/koeln.png" ></a>
 <a href="https://www.opensides.be">
-<img class="imgframe" alt="superB" src="pics/opensides.png" ></a>
+<img class="imgframe" alt="FAI user" src="pics/opensides.png" ></a>
 <a href="https://www.gl-systemhaus.de">
-<img class="imgframe" alt="superB" src="pics/gundl.png" ></a>
+<img class="imgframe" alt="FAI user" src="pics/gundl.png" ></a>
 <a href="https://www.ska.ac.za">
-<img class="imgframe" alt="superB" src="pics/ska.png" ></a>
+<img class="imgframe" alt="FAI user" src="pics/ska.png" ></a>
 <a href="https://iils.de">
-<img class="imgframe" alt="superB" src="pics/iils.png" ></a>
+<img class="imgframe" alt="FAI user" src="pics/iils.png" ></a>
 <a href="https://fsf.org">
-<img class="imgframe" alt="superB" src="pics/fsf.png" ></a>
+<img class="imgframe" alt="FAI user" src="pics/fsf.png" ></a>
 <a href="https://www.chip.de">
-<img class="imgframe" alt="superB" src="pics/chip.png" ></a>
+<img class="imgframe" alt="FAI user" src="pics/chip.png" ></a>
 <a href="https://www.ibr.cs.tu-bs.de">
-<img class="imgframe" alt="superB" src="pics/braunschweig.png" ></a>
+<img class="imgframe" alt="FAI user" src="pics/braunschweig.png" ></a>
+<a href="https://www.ismll.uni-hildesheim.de">
+<img class="imgframe" alt="FAI user" src="pics/hildesheim.png" ></a>
 <a href="http://nedap-healthcare.com">
-<img class="imgframe" alt="superB" src="pics/nedap.png" ></a>
+<img class="imgframe" alt="FAI user" src="pics/nedap.png" ></a>
 <a href="http://www.wolke.hs-furtwangen.de">
-<img class="imgframe" alt="superB" src="pics/hfu.png" ></a>
+<img class="imgframe" alt="FAI user" src="pics/hfu.png" ></a>
 </span>
 
 <p>
