--- a/otherdocs/index.html
+++ b/otherdocs/index.html
@@ -118,7 +118,7 @@ an older article, since they use a 2.6 kernel.
 a Eucalyptus Cloud Automatically with Fully Automatic Installation</a>
 paper published in  IEEE International Conference on Computer Science and Automation Engineering (CSAE), 2012
 
-<li> <a href="doc/CRL-2010-01.pdf">Research article</a> by Frank
+<li> <a href="/doc/CRL-2010-01.pdf">Research article</a> by Frank
 Doelitzscher et. al. appeared in Computing, January 2011, Volume 91, Issue 1: Private Cloud for Collaboration and
 e-Learning Services: from IaaS to SaaS
 
