add link to screenshot, add ufbi

--- a/otherdocs/index.html
+++ b/otherdocs/index.html
@@ -36,7 +36,9 @@ management.
 <li>
 <a
 href="https://github.com/J0oo/FAI-Administration-Tool">FAI-Administration-Tool</a>
-is a simple web based application (a PHP, JavaScript) used to create client configurations for boot over PXE and afterwards installation with FAI.
+is a web based application (a PHP, JavaScript) used to create
+client configurations for boot over PXE and afterwards installation
+with FAI. (<a href="https://github.com/J0oo/FAI-Administration-Tool/commit/8be79bde54f48764e5be2a230dd227e744f53b78">screenshots)
 
 <li> A <a href="https://www.ch.cam.ac.uk/computing/web-frontend-faimond">
 Web-frontend</a> to fai-monitor
@@ -57,6 +59,8 @@ databases. This project is stalled.
 fork of GOsa which is actively maintained.
 
 <li> <a href="https://iankelling.org/git/?p=automated-distro-installer">Multi-boot/distro btrfs provisioning</a>
+
+<li> <a href="https://www.matteoguglielmi.net/ufbi/">Unattended First Boot Install</a>
 
 </ul>
 
