--- a/reports/index.html
+++ b/reports/index.html
@@ -36,6 +36,31 @@ Currently we have more than 300 detailed reports. Please also fill out the <a hr
 <p>
 <hr/>
 
+<b>From:</b> 朴文学, piao100101 gmailcom
+<br><b>Date:</b> Mon, 15 Jan 2018 18:11:46 +0900
+<pre>
+How many hosts have you installed using fai? <b>20</b>
+Which version of fai are you using? <b>5.3.4</b>
+
+Which types of hosts are you installing with fai? Cloud Cluster node
+
+Which version are you using as your install kernel? Debian 3.16 kernel
+How do you boot your hosts  via network PXE and using FAI-CD from USB
+Does the default install kernel recognize all your hardware? yes
+Do you manage your configuration space under version control? No
+How big is your config space? 372MB
+How many files do you have in ../config/files? 20
+What types of scripts are you using for local customization? shell, python
+
+<b>What is the business of your company/organisation?</b> <a href="http://www.konkuk.ac.kr/">Konkuk University in korea</a>
+<br><b>Additional comments:</b>
+It is great project that user can custom hook for installation
+I think fai need web page to monitoring all installed hosts and process of installation
+</pre> <HR>
+
+
+
+
 <b>From:</b> Jörg Striewski, last.at.ismll.de
 <br><b>Date:</b> Thu, 11 Jan 2018 11:13:48 +0100
 <pre>
