--- a/index.html
+++ b/index.html
@@ -55,21 +55,15 @@ Motto: Plan your installation, and FAI installs your plan.</p>
 
 <ul>
 
-<li>
-I <a href="https://lists.uni-koeln.de/pipermail/linux-fai/2017-November/011869.html">announced</a> the <a href="/FAIme">FAI.me</a> service
-</li>
-<li> [26 Nov 2017] I attended the <a
-href="https://wiki.debian.org/DebianEvents/gb/2017/MiniDebConfCambridge">Mini-Debconf
-in Cambridge</a> end of november. 
-</li>
-
-<li>[8 Nov 2017] <b>FAI 5.5 released</b> and new ISO images are available
+<li>[18 Jan 2018] FAI 5.5.1 released</li>
+<li> <b>
+I <a href="https://lists.uni-koeln.de/pipermail/linux-fai/2017-November/011869.html">announced</a> the <a href="/FAIme">FAI.me</a> service</b>
 </li>
 
 <li>[18 Oct 2017] We had a great Debian cloud sprint in
-Seattle/Bellevue. We've created a FAI <a
-href="https://anonscm.debian.org/git/cloud/fai-cloud-images.git">config space</a> for <br> GCE, Azure,
-EC2 and Openstack cloud images and a huge test suite
+Seattle/Bellevue. We've created a <br>FAI <a
+href="https://salsa.debian.org/cloud-team/fai-cloud-images">config space</a> for  GCE, Azure,
+EC2 and Openstack cloud images
 </li>
 <li>[6 Oct 2017] <a
 href="https://youtu.be/5eZcMTT70rg">Video
