--- a/references/index.html
+++ b/references/index.html
@@ -127,6 +127,9 @@ hr {margin: 1em 0;background:#777777;height:2px;color:#777777;border:none;clear:
 <img class="imgframe" alt="FAI user" src="pics/nedap.png" ></a>
 <a href="http://www.wolke.hs-furtwangen.de">
 <img class="imgframe" alt="FAI user" src="pics/hfu.png" ></a>
+<a href="https://www.linuxhotel.de">
+<img class="imgframe" alt="FAI user" src="pics/linuxhotel.png" ></a>
+
 </span>
 
 <p>
